--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,15 @@
-/* #library {
+#library {
+    padding: 40px;
     display: grid;
-} */
+    justify-content: flex-start;
+    grid-template-columns: repeat(3, auto);
+    gap: 50px;
+}
 
 .book {
-    display: inline-block;
     width: 230px;
     height: 390px;
     box-shadow: 0 0 20px #aaa;
-    margin: 25px;
     padding: 10px 10px 0 10px;
     vertical-align: top;
 }
