--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,17 @@
 
 #x {
     color: red;
+    /* width: 20px;
+    height: auto; */
+    border-radius: 50%;
+    border: none;
     position: absolute;
     left: -7px;
-    top: -5px;
-    transform: scale(.5);
+    top: -4px;
+    transform: scale(.7);
+}
+
+#x:hover {
+    background-color: rgb(212, 212, 212);
+    cursor: zoom-in;
 }
